<resources>
    <string name="app_name">MyMess</string>
    <string name="logout">Logout</string>
    <string name="meal">Meal</string>
    <string name="south_mess">South</string>
    <string name="north_mess">North</string>
    <string name="yuktahaar">Yuktahaar</string>
    <string name="kadamba_veg">Kadamba Veg</string>
    <string name="kadamba_non_veg">Kadamba Non-Veg</string>
    <string name="home_text">Your one stop solution to all mess related activities</string>
    <string name="change_mess_registration">Change Mess Registration</string>
    <string name="view_mess_registration">View Mess Registration</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="view_mess_menus">View Mess Menus</string>
    <string name="mess">Mess</string>
    <string name="choose_cancel_mess">Choose/Cancel Mess</string>
    <string name="register_mess">Register Mess</string>
    <string name="about">About</string>
    <string name="about_text">MyMess app helps students of International Institute of Information Technology, Hyderabad
                            to do all mess related activities like viewing mess menus, changing/cancelling mess registrations, viewing mess registrations etc.
    </string>
    <string name="disclaimer_text">This app is NOT an official app by International Institute Of Information Technology, Hyderabad. It is a prototype and doesn\'t connect to work on IIIT-H server or mess database.
        Developer take no responsibility of the data shown and fetched from different services.
    </string>
    <string name="developers_name">Bhavi Dhingra</string>
    <string name="github_link_text">github.com/BhaviD/MyMess</string>


    <string-array name="days">
        <item>Choose Day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="meals">
        <item>MEAL</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>
