<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ccc">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/meal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="50sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meal"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="111dp"
                android:layout_marginLeft="111dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="92dp"
                android:layout_marginRight="92dp">

                <RadioButton
                    android:id="@+id/south"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/south_mess" />

                <RadioButton
                    android:id="@+id/north"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/north_mess" />


                <RadioButton
                    android:id="@+id/yuktahaar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yuktahaar" />


                <RadioButton
                    android:id="@+id/kadamba_veg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kadamba_veg" />


                <RadioButton
                    android:id="@+id/kadamba_nonveg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kadamba_non_veg" />
            </RadioGroup>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>