<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:fillViewport="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />


    <TextView
        android:id="@+id/about_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/main3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app_title"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_app_title" />

    <TextView
        android:id="@+id/disclaimer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:layout_marginTop="40dp"
        android:text="Disclaimer"
        android:textColor="@color/main2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text" />

    <TextView
        android:id="@+id/disclaimer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disclaimer_title"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/disclaimer_text"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/disclaimer_title"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/github_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/developers_name_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclaimer_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="24dp"
            android:src="@drawable/github_logo_32" />

        <TextView
            android:id="@+id/github_link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:text="@string/github_link_text"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/developers_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/developers_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="Developed By"
        android:textSize="15sp"
        android:textColor="@color/main2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_link" />

    <TextView
        android:id="@+id/developers_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:paddingBottom="5dp"
        android:text="@string/developers_name"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developers_name_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
